# Ai_study

./: .gitignore
Crew_ai/: crew_planner.py  crewai_setting.ipynb  hello_crewai.ipynb  scenario_sequential.ipynb  tools.py
Crew_ai/hi_crewai/: README.md  pyproject.toml  report.md
Crew_ai/hi_crewai/src/hi_crewai/: crew.py  main.py
Deep_learning/: DL.ipynb  best_model_epoch_1.pth  best_model_epoch_10.pth  best_model_epoch_2.pth  best_model_epoch_3.pth  best_model_epoch_4.pth  best_model_epoch_5.pth  best_model_epoch_7.pth  cat_dog.ipynb  cifar10_cnn.ipynb  cifar10_cnn_torch.ipynb  cifar10_resnet.ipynb  custom_cnn_model.py  fire_smoke_detect.ipynb  foods_wines.ipynb  iris_dl.ipynb  iris_dl2.ipynb  iris_pt1.ipynb  iris_tf1.ipynb  mnist_ANN_CNN.ipynb  mnist_numbers.ipynb  my_model1.keras  my_model2.keras  my_model_ann.keras  my_model_cnn.h5  pytorch_model1.ipynb  yolo.ipynb
ML/: knn_1.ipynb  ml0509_2.ipynb  ml0509_3.ipynb  ml0512_1.ipynb  ml0512_4.ipynb  ml0513_1.ipynb  ml_streamlit_cali.py  svm0514_1.ipynb
Machine_learning/: decision_tree0515_1.ipynb  ml0508_1.ipynb  ml0508_2.ipynb  ml0509_1.ipynb  ml0512_2.ipynb  ml0512_3.ipynb  ml0513_2.ipynb  ml0513_3.ipynb  ml_streamlit_dia.py  random_forest0515_1.ipynb  tree_streamlit.py  xgboost_1.ipynb  xgboost_2.ipynb  xgboost_3.ipynb
RNN/: RNN_01.ipynb  RNN_BBC.ipynb
Transformer/: my_vision_Transformer_202506의_사본.ipynb  transformer.ipynb  vision_transformer.ipynb
ai_portfolio_evaluator/: app.py
drone_ar_airway/: app.py
open_api_part1/: api_models.ipynb  chatbot_streamlit_openai.py  dalle.ipynb  image_vision.py  (+10 more)
(+85 files in other folders)
