[project]
name = "hi_crewai"
version = "0.1.0"
description = "HI_CREWAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
hi_crewai = "hi_crewai.main:run"
run_crew = "hi_crewai.main:run"
train = "hi_crewai.main:train"
replay = "hi_crewai.main:replay"
test = "hi_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
